<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main_home_nav">MainHomeNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="logoutt">Logout</string>
    <string name="Home">Home</string>
    <string name="location">Location</string>
    <string name="OrderHis">Order History</string>
    <string name="Favorite">Favorite</string>
    <string name="Orders">Orders</string>
    <string name="Profile">Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>